# librasoffice-win

./: .gitmodules  CMakeLists.txt  MonitorableUIAutoEvents.h  README.md  jsonsdatabase.cpp  jsonsdatabase.h  librasoffice_app.cpp  librasoffice_app.h  listenercontroller.cpp  listenercontroller.h  main.cpp  qml.qrc  wineventlistener.cpp  wineventlistener.h
WinEventListener/: generaleventshandler.h  wineventlistener.h
gifs/: laso_database.json
qml/: main.qml  popupSign.qml
